Renamed to something more self-descriptive.
git-svn-id: file:///home/candide/src/0_Local_SVN_Repos/templates/trunk@1536 92e5ae4a-8afd-0310-8b33-eaebc6dd6768

--- a/gnu-make/Makefile.src.template
+++ b/gnu-make/Makefile.src.template
@@ -179,10 +179,23 @@ install_libs.parts: $(TARG_LIB).a $(TARG_LIB).so
 		cp -a $? $(LIBDIR)/; \
 	fi
 
+
+#
+# Unit-Testing
+#
+
+#T# If your unit tests are inside of the source-subdir, use this:
 test: utest
 unit_test: utest
 utest:
 	cd utests; $(MAKE) all
+
+#T# If this *IS* the unit tests subdir, use this:
+run: $(TARG_BINS)
+	for b in $(TARG_BINS); do
+		$b
+	done
+
 
 #
 # Profiling
