Fixed:  Garbage filename for cleanup includes.
git-svn-id: file:///home/candide/src/0_Local_SVN_Repos/templates/trunk@1540 92e5ae4a-8afd-0310-8b33-eaebc6dd6768

--- a/gnu-make/Makefile.src.template
+++ b/gnu-make/Makefile.src.template
@@ -170,7 +170,7 @@ include $(BASEDIR)/make.deprules.mk
 
 # Cleanup
 #
-include $(BASEDIR)/make.tar_n_doc.m
+include $(BASEDIR)/make.cleanup.mk
 
 
 # Installation rules.
