Fixed:  Errors in execution scriptlet for the "run_utests" rule.
git-svn-id: file:///home/candide/src/0_Local_SVN_Repos/templates/trunk@1541 92e5ae4a-8afd-0310-8b33-eaebc6dd6768

--- a/gnu-make/Makefile.src.template
+++ b/gnu-make/Makefile.src.template
@@ -144,8 +144,11 @@ utest:
 
 #T# If this *IS* the unit tests subdir, use this:
 run_utests: $(TARG_BINS)
-	for b in $(TARG_BINS); do
-		$b
+	for b in $(TARG_BINS); do \
+		case $$b in \
+			/*) $$b; ;; \
+			*)  ./$$b; ;; \
+		esac; \
 	done
 
 #
