Added "relink" and "clean_targs" targets.
git-svn-id: file:///home/candide/src/0_Local_SVN_Repos/templates/trunk@1704 92e5ae4a-8afd-0310-8b33-eaebc6dd6768

--- a/gnu-make/Makefile.dir.template
+++ b/gnu-make/Makefile.dir.template
@@ -41,9 +41,13 @@ TARG_SUBDIRS:=
 #T# Alternatives:  call "install" or "run"
 all: build_all
 
+relink: $(TARG_SUBDIRS:%=%.relink_all)
+
 build_all: $(TARG_SUBDIRS:%=%.build_all)
 
 install: $(TARG_SUBDIRS:%=%.install)
+
+reinstall: relink install
 
 run: $(TARG_SUBDIRS:%=%.run)
 
@@ -68,6 +72,10 @@ distclean: $(TARG_SUBDIRS:%=%.veryclean)
 #T# For binaries & executables
 $(TARG_SUBDIRS:%=%.build_all):
 	cd $(@:%.build_all=%); $(MAKE) build_all
+
+#T# For binaries & executables
+$(TARG_SUBDIRS:%=%.relink_all):
+	cd $(@:%.relink_all=%); $(MAKE) relink
 
 #T# For binaries & executables
 $(TARG_SUBDIRS:%=%.install):
