Modified the "all" rule.
git-svn-id: file:///home/candide/src/0_Local_SVN_Repos/templates/trunk@1705 92e5ae4a-8afd-0310-8b33-eaebc6dd6768

--- a/gnu-make/Makefile.src.template
+++ b/gnu-make/Makefile.src.template
@@ -83,7 +83,7 @@ finder = $(shell find $(1) \( -path "*/CVS" -prune \) -o \! -type d -print)
 ##########
 
 
-all:
+all: build_all
 
 relink: clean_targs build_all
 
