- Added support for installing headers from the source-directory and   template implementations from a "details" subdirectory.  This way,   the headers don't need to live in the main "include" directory but   can be with their source lib. - Separated the install rules for *.a and *.so libs.  Individual   "Makefile"s can use whichever they wish now.
git-svn-id: file:///home/candide/src/0_Local_SVN_Repos/templates/trunk@1722 92e5ae4a-8afd-0310-8b33-eaebc6dd6768

--- a/gnu-make/Makefile.src.template
+++ b/gnu-make/Makefile.src.template
@@ -52,6 +52,11 @@ TARG_COMMON_OBJS:=
 # Standalone Headers or C headers.
 HEADERS:=
 
+# Standalone C++ Headers/Template Source.
+# Should live under "details" subdir.  Will be installed under
+# $(INCDIR)/details, with relative path preserved.
+HEADER_DETAILS:=
+
 # C files
 CSRC:=
 
@@ -182,6 +187,13 @@ include $(BASEDIR)/make.cleanup.mk
 #
 include $(BASEDIR)/make.installrules.mk
 #T# Remove the above if you're not installing anything, like in unit tests.
+
+#T# Customize accordingly, or remove if not installing anything.
+#T# In place of ''install_libs'', you can also use one of the following:
+#T#     * install_static_libs
+#T#     * install_dynamic_libs 
+install: install_libs install_bin install_headers
+
 
 # Packaging
 #
