--- a/gnu-make/Makefile.dir.template
+++ b/gnu-make/Makefile.dir.template
@@ -94,11 +94,14 @@ $(TARG_SUBDIRS:%=%.veryclean):
 $(TARG_SUBDIRS:%=%.gcov):
 	cd $(@:%.gcov=%); make gcov
 
-tags: TAGS
+clean_tags: 
+	-rm -f TAGS
+
+tags: clean_tags TAGS
 
 TAGS:
 	(\
-	find . \( \
+	find . -type f -a \( \
 		`echo -name\ '*.'{h,C,cc,c,sh,p{m,l},js,java}\ -o\ `\
 		`echo -name\ '*.'{octave,m,f,xml,tcl,el}\ -o\ `\
 		-name '*akefile' -o -name '*.mk' \) -print0 \
