--- a/gnu-make/Makefile.dir.template
+++ b/gnu-make/Makefile.dir.template
@@ -94,18 +94,29 @@ $(TARG_SUBDIRS:%=%.veryclean):
 $(TARG_SUBDIRS:%=%.gcov):
 	cd $(@:%.gcov=%); make gcov
 
-clean_tags: 
+clean_tags:
 	-rm -f TAGS
 
 tags: clean_tags TAGS
 
 TAGS:
+	( \
+	local nameopts="-name '*akefile'"; \
+    for suf in h C cc tcc c sh pm pl js java octave m f xml tcl el mk; do \
+		nameopts="$$nameopts$${nameopts:+ -o} -name '*.$$suf'"; \
+	done; \
+	eval "find . -type f -a \( $$nameopts \) -print0" \
+	    | xargs -0 etags -a --members --ignore-indentation --declarations; \
+	)
+
+ebrowse:
 	(\
-	find . -type f -a \( \
-		`echo -name\ '*.'{h,C,cc,c,sh,p{m,l},js,java}\ -o\ `\
-		`echo -name\ '*.'{octave,m,f,xml,tcl,el}\ -o\ `\
-		-name '*akefile' -o -name '*.mk' \) -print0 \
-	| xargs -0 etags --declarations -d \
+	local nameopts=""; \
+    for suf in h C cc tcc c; do \
+		nameopts="$$nameopts$${nameopts:+ -o} -name '*.$$suf'"; \
+	done; \
+	eval "find . -type f -a \( $$nameopts \) -print" \
+	    | ebrowse --verbose \
 	)
 
 
