- Relocated the tar/doxygen rules from Makefile.src.template to   Makefile.dir.template, since it should really only be in the   top-level Makefile. - Backported several useful features from the research-nld/Makefile:   + "utests.all" depends on "src.all"   + General collection of "ARCH" values, for modern CPUs.   + Compiler flag changes in GCC4   + New "OPTIMIZE" & "DEBUG" behavior.   + New "REGRESSION" settings.
git-svn-id: file:///home/candide/src/0_Local_SVN_Repos/templates/trunk@1990 92e5ae4a-8afd-0310-8b33-eaebc6dd6768

--- a/gnu-make/Makefile.dir.template
+++ b/gnu-make/Makefile.dir.template
@@ -120,6 +120,18 @@ ebrowse:
 	)
 
 
+# Make sure the unit tests are built after the source.
+utests.all: src.all
+#T# Remove the above if there's no 'utests' subdirectory in the directory
+#T# where this Makefile lives.
+
+
+# Packaging
+#
+include make.tar_n_doc.mk
+#T# Remove the above if this isn't the toplevel Makefile.
+
+
 #################
 #
 #  End
