- Makefile Build-Engine Changes:   + Backported changes from various projects into make.syscfg.mk   + Removed the GNU Make macros from the "Makefile.*.template"s.     They're included just fine from "make.vars.mk".   + Moved "features" out of "Makefile.dir.template" into     "Makefile.src.template".   + Fleshed out the "make.libobjsV.mk" feature in     "Makefile.src.template".   + Updated the doxygen rule so that it stops if making the target dir     fails. - Changes to "main.cc" Boilerplate:   + The guts of "ProgramOptions" now resides in its own class,     "jpwTools::boost_helpers::ProgramOptions_Base".   + "ProgramOptions" now inherits from     "jpwTools::boost_helpers::ProgramOptions_Base".  The boilerplate     for "ProgramOptions" is now much smaller.
git-svn-id: file:///home/candide/src/0_Local_SVN_Repos/templates/trunk@2017 92e5ae4a-8afd-0310-8b33-eaebc6dd6768

--- a/gnu-make/Makefile.dir.template
+++ b/gnu-make/Makefile.dir.template
@@ -30,6 +30,16 @@
 
 TARG_SUBDIRS:=
 
+DOXYGEN_CFG:=
+DOXYGEN_CFG_TARG_DIR:=
+#T# Remove the above if this isn't the toplevel directory.
+#T# Both of these variables are optional.
+
+# Archive basename.
+TARPKG_NAME=
+#T# Remove the above if this isn't the toplevel directory, or if you're not
+#T# supporting tarballing of your source.
+
 
 ##########
 #
