- Backported new features from a live project:   + Bindist rules added.   + Changes to the 'configure'-generated packaging files, since they get put     into the 'distclean' rule.   + New macro to specify the 'configure'-generated packaging files.
git-svn-id: file:///home/candide/src/0_Local_SVN_Repos/templates/trunk@2069 92e5ae4a-8afd-0310-8b33-eaebc6dd6768

--- a/autoconf-make/configure.ac
+++ b/autoconf-make/configure.ac
@@ -26,6 +26,11 @@ m4_include([ax_jpwTools.m4])
 # [jpw] We're building on Linux only.  Follow the FHS layout.
 AX_JPW_USE_FHS_DEFAULTS
 
+# FIXME::[jpw]  Remove if not true:
+# [jpw] We're building Debian and RPM packaging files.
+AX_JPW_CREATING_DEB_RPM([pkgTemplates/debian.control], 
+                        [pkgTemplates/%%ProjectName%%.spec])
+
 
 # [jpw] Example of how to define a custom variable.
 #AX_JPW_ARG_MAKEFILE_VAR([CUSTOM_PATH], 
@@ -100,8 +105,7 @@ AX_JPW_REQUIRE([BOOST_PROGRAM_OPTIONS], [boost::program_options], [ax])
 AC_CONFIG_FILES([Makefile
                  src/Makefile
                  #%custom-file-without-the-.in-suffix%#
-                 #%package-name%#.spec
-                 debian/control])
+                 ])
 AC_OUTPUT
 
 
