--- a/autoconf-make/topdir.Makefile.am
+++ b/autoconf-make/topdir.Makefile.am
@@ -23,5 +23,40 @@ debian_build_files = debian/changelog debian/compat \
 ## here.  I thought that *_DATA macros added their files to the
 ## dist-manifest...
 EXTRA_DIST = $(nobase_doc_DATA) $(debian_build_files) #@PACKAGE@#.spec
+CLEANFILES = debian/files debian/*.debhelper.log
 
 
+##
+## [jpw] Rules & vars for binary-only distribution.
+##
+
+
+bindistdir_base=$(abs_top_srcdir)/bindist
+bindistdir=$(distdir)-$${arch}
+top_bindistdir = $(bindistdir_base)/$(bindistdir)
+bindist_archive = $(PACKAGE_TARNAME)-$${arch}
+
+
+clean-bindist:
+	-rm -rf $(bindistdir_base)
+
+mostlyclean-local: clean-bindist
+
+bindist-install-recurse:
+	arch="bin_`uname -m`" && \
+		$(MAKE) DESTDIR=$(top_bindistdir) install
+
+bindist: bindist-install-recurse
+	arch="bin_`uname -m`" && \
+		cd $(top_bindistdir) && \
+		tardir=. && \
+		$(am__tar) | \
+			GZIP=$(GZIP_ENV) \
+				gzip -c >$(bindistdir_base)/$(bindist_archive).tar.gz
+
+bindist-bzip2: bindist-install-recurse
+	arch="bin_`uname -m`" && \
+		cd $(top_bindistdir) && \
+		tardir=. && \
+		$(am__tar) | \
+			bzip2 -9 -c >$(bindistdir_base)/$(bindist_archive).tar.bz2
