- Changed the AX_JPW_CREATING_DEB_RPM to take the source directory separately,   since the files pretty much have to be in a different directory to ensure   that 'distclean' only removes the generated files and not their permanent   copies.
git-svn-id: file:///home/candide/src/0_Local_SVN_Repos/templates/trunk@2071 92e5ae4a-8afd-0310-8b33-eaebc6dd6768

--- a/autoconf-make/configure.ac
+++ b/autoconf-make/configure.ac
@@ -28,8 +28,9 @@ AX_JPW_USE_FHS_DEFAULTS
 
 # FIXME::[jpw]  Remove if not true:
 # [jpw] We're building Debian and RPM packaging files.
-AX_JPW_CREATING_DEB_RPM([pkgTemplates/debian.control], 
-                        [pkgTemplates/%%ProjectName%%.spec])
+AX_JPW_CREATING_DEB_RPM([pkgTemplates],
+                        [debian.control], 
+                        [%%ProjectName%%.spec])
 
 
 # [jpw] Example of how to define a custom variable.
