- Backporting fixes found in a live project during development.
git-svn-id: file:///home/candide/src/0_Local_SVN_Repos/templates/trunk@2074 92e5ae4a-8afd-0310-8b33-eaebc6dd6768

--- a/packaging/template.spec.in
+++ b/packaging/template.spec.in
@@ -80,12 +80,12 @@ BuildArchitectures: i386 i586 i686 x86_64 amd64
 %endif
 
 
+# [jpw] You generally don't need these.  See the RPM Specfile documentation.
+# 
 # 'Prefix:' makes the listed paths relocatable.
 ##Prefix: %{_prefix}
 ##Prefix: %{_sysconfdir}
 #Docdir: @^doc_dir@/@^package^@
-## FIXME::[jpw] For use with Autoconf
-#Docdir: @^docdir^@
 ##@^extra_headers^@
 
 %description
@@ -93,13 +93,15 @@ BuildArchitectures: i386 i586 i686 x86_64 amd64
 
 %prep
 rm -rf %{buildroot}/*
-%setup
 
+%setup
 
 %build
 echo BuildRoot=%{buildroot}
+
 %configure
 #%configure $LOCALFLAGS
+
 %{__make}
 
 %postun
@@ -115,7 +117,9 @@ rm -rf %{buildroot}/*
 %files
     %defattr(-,root,root)
     %doc @^doc_files^@
+    %doc %{_docdir}/@^share_doc_subdir_as_installed^@/*
     %config @^a_config_file^@
+    %config %{_sysconfdir}/@^config_file_under_etc^@
     %config @^another_config_file^@
     %config(noreplace) @^a_config_file_not_to_overwrite^@
     %{_bindir}/*
