- Added missing "include" needed for the tar-n-src sub-Makefile.
git-svn-id: file:///home/candide/src/0_Local_SVN_Repos/templates/trunk@2345 92e5ae4a-8afd-0310-8b33-eaebc6dd6768

--- a/gnu-make/Makefile.dir.template
+++ b/gnu-make/Makefile.dir.template
@@ -138,8 +138,9 @@ utests.all: src.all
 
 # Packaging
 #
+include make.vars.mk
 include make.tar_n_doc.mk
-#T# Remove the above if this isn't the toplevel Makefile.
+#T# Remove the above 2 lines if this isn't the toplevel Makefile.
 
 
 #################
